[package]
name = "remoteprocess"
version = "0.4.10"
authors = ["Ben Frederickson <github@benfrederickson.com>"]
repository = "https://github.com/benfred/remoteprocess"
homepage = "https://github.com/benfred/remoteprocess"
description = "cross platform api for getting information on a running processes"
readme = "README.md"
license = "MIT"
build="build.rs"
edition="2021"

[dependencies]
libc = "0.2"
log = "0.4"
proc-maps = "0.2.1"
read-process-memory = "0.1.4"
goblin = "0.5.3"
memmap = "0.7.0"
regex = ">=1.6.0"

[target.'cfg(target_os="macos")'.dependencies]
mach_o_sys = "0.1.1"
mach = "0.3.2"
libproc = "0.12"

[target.'cfg(target_os="linux")'.dependencies]
nix = {version = "0.25", default-features = false, features = ["ptrace", "sched", "signal"]}
object = "0.30"
addr2line = "0.18"
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winbase", "consoleapi", "wincon", "handleapi", "timeapi", "processenv" ]}

[dev-dependencies]
env_logger = "0.9"

[features]
default = []
unwind = []
