[package]
name = "remoteprocess"
version = "0.5.0"
authors = ["Ben Frederickson <github@benfrederickson.com>"]
repository = "https://github.com/benfred/remoteprocess"
homepage = "https://github.com/benfred/remoteprocess"
description = "cross platform api for getting information on a running processes"
readme = "README.md"
license = "MIT"
build="build.rs"
edition="2021"

[dependencies]
libc = "0.2"
log = "0.4"
proc-maps = "0.4"
read-process-memory = "0.1.6"
goblin = "0.9"
regex = ">=1.8.3"
cfg-if = "1.0.0"

[target.'cfg(target_os="macos")'.dependencies]
mach_o_sys = "0.1.1"
mach = "0.3.2"
libproc = "0.14"

[target.'cfg(target_os="linux")'.dependencies]
nix = {version = "0.26", default-features = false, features = ["ptrace", "sched", "signal"]}
object = "0.36"
addr2line = "0.24"
lazy_static = "1.5.0"
memmap2 = "0.9.4"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winbase", "consoleapi", "wincon", "handleapi", "timeapi", "processenv", "errhandlingapi" ]}

[dev-dependencies]
env_logger = "0.11"

[target.'cfg(target_os="freebsd")'.dev-dependencies]
mark-flaky-tests = "1"

[features]
default = []
unwind = []
